<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>in.dl-java</groupId>
	<artifactId>dl-java</artifactId>
	<version>1.0.0</version>
	<name>dl-java</name>
	<description>Deep Learning Library with Native Java SIMD API</description>
	<properties>
		<java.version>18</java.version>
		<maven.compiler.target>1.18</maven.compiler.target>
		<maven.compiler.source>1.18</maven.compiler.source>
	</properties>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>18</source>
					<target>18</target>
					<compilerArgs>
						<arg>--add-modules</arg>
						<arg>jdk.incubator.vector</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>